Fix alignment of "Log In" and "Sign Up" on navbar

--- a/dev/final/assets/stylesheets/application.sass
+++ b/dev/final/assets/stylesheets/application.sass
@@ -47,7 +47,6 @@ html
             @include hover($color-orange, darken($color-orange, 20))
 
             &.navbar-login, &.navbar-signup
-              margin-top: ($navbar-height - 60px) / 2
               text-align: center
 
             &.navbar-notifications
